Fix button contrast and add forms label
- Create a bordered button.
- Add lables for each input in our form.
- Fix icons overlaps.

--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ body {
   width: 55%;
   padding: 15px 0;
   color: white;
+  column-gap: 12px;
 }
 
 .icon1 {
@@ -386,7 +387,6 @@ a {
 }
 
 .btn:hover {
-  background: #7d73fc;
   box-shadow: 0 8px 16px rgba(125, 115, 252, 0.5);
 }
 
@@ -402,6 +402,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   border-bottom: 2px solid black;
   width: 100%;
   padding: 10px 0;
@@ -435,6 +436,16 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
+  gap: 12px;
+}
+
+.prjct label {
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
 }
 
 .wrt {
@@ -625,8 +636,18 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding: 15px 0;
+    gap: 12px;
+    width: auto;
+  }
+
+  .prjct label {
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
   }
 
   .btn {
@@ -665,7 +686,7 @@ a {
 
   .visit {
     border-bottom: 2px solid #3a3837;
-    width: 1000%;
+    width: 100%;
   }
 
   .border-bottom {
